# bevy_eventwork

./: .gitignore  CHANGELOG.md  CLEANUP_PLAN.md  Cargo.toml  DOCUMENTATION_PROGRESS.md  PRODUCTION_VIABILITY.md  README.MD  RELEASE_NOTES_0.10.0.md  SENDING_MESSAGES.md  remove_network_message_impls.ps1  test_dto_types.rs  test_websocket.html  test_websocket.js
.augment-scripts/: test_multiple_clients.sh
crates/demo_shared/: Cargo.toml
crates/demo_shared/src/: lib.rs
crates/eventwork/: Cargo.toml
crates/eventwork/examples/: README.md  automatic_messages.rs  client.rs  server.rs  shared.rs
crates/eventwork/examples/examples_shared/: mod.rs
crates/eventwork/examples_common/: Cargo.toml
crates/eventwork/examples_common/src/: lib.rs
crates/eventwork/src/: lib.rs  managers.rs  reflection.rs  tcp.rs
crates/eventwork/src/managers/: network.rs  network_request.rs  outbound_immediate.rs  outbound_scheduled.rs
crates/eventwork/src/plugins/: mod.rs  reflection.rs
crates/eventwork/src/runtime/: bevy_runtime.rs
crates/eventwork/tests/: unified_api_tests.rs
crates/eventwork_client/: Cargo.toml  README.md
crates/eventwork_client/examples/: basic_server.rs
crates/eventwork_client/examples/basic_client/: Cargo.toml  Trunk.toml
crates/eventwork_client/examples/basic_client/src/: main.rs
crates/eventwork_client/examples/fanuc_real_client/: Cargo.toml
crates/eventwork_client/examples/fanuc_real_client/src/: main.rs
crates/eventwork_client/src/: client_type_registry.rs  components.rs  context.rs  error.rs  hooks.rs  lib.rs  native_client.rs  provider.rs  registry.rs  traits.rs
crates/eventwork_client/src/devtools/: mod.rs  sync.rs  ui.rs
crates/eventwork_client_example_shared/: Cargo.toml
crates/eventwork_client_example_shared/src/: lib.rs
crates/eventwork_common/: Cargo.toml
crates/eventwork_common/src/: lib.rs  messages.rs  network_message_file.rs  reflection.rs  request_shared.rs
crates/eventwork_common/src/codec/: binary.rs  mod.rs
crates/eventwork_devtools/: Cargo.toml
crates/eventwork_devtools/devtools-demo-client/: Cargo.toml  Trunk.toml  index.html
crates/eventwork_devtools/devtools-demo-client/src/: main.rs
crates/eventwork_devtools/fanuc_client/: Cargo.toml  README.md  Trunk.toml  index.html
crates/eventwork_devtools/fanuc_client/src/: main.rs
crates/eventwork_devtools/fanuc_real_client/: Cargo.toml  index.html
crates/eventwork_devtools/fanuc_real_client/src/: main.rs
crates/eventwork_devtools/src/: lib.rs  type_registry.rs
crates/eventwork_macros/: Cargo.toml
crates/eventwork_macros/src/: lib.rs
crates/eventwork_memory/: Cargo.toml  README.md
crates/eventwork_memory/src/: connection_cleanup.rs  fixed_networking_plugin.rs  lib.rs  memory_diagnostic.rs  memory_monitor.rs  message_cleanup.rs  plugin.rs  test_memory_leak.rs
crates/eventwork_project/: Cargo.toml
crates/eventwork_project/src/: network_message.rs
crates/eventwork_sync/: Cargo.toml  README.md
crates/eventwork_sync/examples/: devtools-demo-server.rs  fanuc_real_server.rs  fanuc_server.rs
crates/eventwork_sync/src/: client_registry.rs  client_sync.rs  control.rs  lib.rs  messages.rs  registry.rs  subscription.rs  systems.rs
crates/eventwork_websockets/: Cargo.toml  README.md
crates/eventwork_websockets/examples/: HYBRID_SERVER.md  client.rs  hybrid_server.rs  immediate_messages.rs  scheduled_messages.rs  server.rs  shared.rs  shared_types.rs
crates/eventwork_websockets/leptos_client_example/: Cargo.toml  README.md  index.html
crates/eventwork_websockets/leptos_client_example/src/: codec.rs  main.rs
crates/eventwork_websockets/src/: lib.rs
crates/fanuc_real_shared/: Cargo.toml
crates/fanuc_real_shared/src/: lib.rs
crates/fanuc_shared/: Cargo.toml
crates/fanuc_shared/src/: lib.rs
crates/network_project/src/: network_message_file.rs
docs/: MIGRATION_0.17.md  README.md
docs-site/: package-lock.json  package.json
docs-site/content/docs/: meta.json
docs-site/scripts/: fix-links.js  sync-and-structure.js
docs-site/src/app/: global.css
docs-site/src/components/: root-toggle.tsx
docs-site/src/lib/: layout.shared.tsx
docs/api/: README.md
docs/architecture/: README.md
docs/client/: index.md
docs/contributing/: README.md  architecture.md  performance.md  research-process.md  technical.md
docs/core/: comparisons.md  getting-started.md  index.md  installation.md  what-is-eventwork.md
docs/core/examples/: README.md
docs/core/guides/: README.md  devtools.md  sending-messages.md  shared-types.md  websocket-patterns.md
docs/core/migration/: MIGRATION_0.17.md
docs/core/reference/: README.md  faq.md  glossary.md  troubleshooting.md
docs/getting-started/: README.md  eventwork-client.md  eventwork-sync.md  eventwork.md  installation.md
docs/guides/: connection-management.md  devtools.md  hooks.md  mutations.md  server-setup.md  shared-types.md  subscriptions.md  type-registry.md
docs/reference/: glossary.md
docs/releases/: README.md  RELEASE_NOTES_v0.10.0.md
docs/sync/: index.md
eventwork_project/src/: lib.rs
eventwork_project/src/managers/: network.rs  network_request.rs
examples/: README.md
examples/basic/client/: Cargo.toml  Trunk.toml  index.html
examples/basic/server/: Cargo.toml
examples/basic/server/src/: main.rs
examples/control-demo/: README.md
examples/control-demo/server/: Cargo.toml
examples/control-demo/server/src/: main.rs
examples/devtools-demo/server/: Cargo.toml
examples/devtools-demo/server/src/: main.rs
examples/fanuc/client/: Cargo.toml  README.md  Trunk.toml
examples/fanuc/server/: Cargo.toml
examples/fanuc/server/src/: main.rs
examples/shared/basic_types/: Cargo.toml
examples/shared/control_demo_types/: Cargo.toml
examples/shared/demo_types/: Cargo.toml
examples/shared/fanuc_real_types/: Cargo.toml
examples/shared/fanuc_real_types/src/: lib.rs
network_project/: Cargo.toml
network_project/src/: lib.rs  network_message_file.rs
research/: CURRENT_STATUS_2025-11-18.md  EVENTWORK_SYNC_ARCHITECTURE.md  EVENTWORK_SYNC_PERFORMANCE.md
src/: lib.rs
(+52 files in other folders)
