[workspace]
resolver = "2"
members = [
    "crates/eventwork",
    "crates/eventwork_websockets",
    "crates/eventwork_common",
    "crates/eventwork_memory",
    "crates/eventwork_macros",
]
exclude = [
    "crates/eventwork_websockets/leptos_client_example",
]

[workspace.package]
rust-version = "1.88.0"
edition = "2024"



[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = ["multi_threaded", "bevy_log"] }
bincode = "1.3.3"

# Fast-compile config
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 16
lto = false
incremental = true

# Use opt level 3 for dependencies
[profile.dev.package."*"]
opt-level = 3