[workspace]
resolver = "2"
members = [
    "crates/eventwork",
    "crates/eventwork_websockets",
    "crates/eventwork_common",
    "crates/eventwork_memory",
    "crates/eventwork_macros",
    "crates/eventwork_sync",
    "crates/eventwork_client",
    "crates/eventwork_client_example_shared",
    "crates/eventwork_devtools",
    "crates/demo_shared",
    "crates/fanuc_shared",
    "crates/fanuc_real_shared",
]

[workspace.package]
rust-version = "1.88.0"
edition = "2024"

exclude = [
    "crates/eventwork_websockets/examples",
    "crates/eventwork_websockets/src/wasm_client_example",
    "crates/eventwork/examples",
    "crates/eventwork_websockets/leptos_client_example",
    "crates/eventwork_devtools/devtools-demo-client",
]



[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = ["multi_threaded", "bevy_log"] }
bincode = { version = "2.0.1", features = ["serde"] }

# Fast-compile config
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 16
lto = false
incremental = true

# Use opt level 3 for dependencies
[profile.dev.package."*"]
opt-level = 3
