[workspace]
resolver = "2"
members = [
    "crates/eventwork",
    "crates/eventwork_websockets",
    "crates/eventwork_common",
    "crates/eventwork_memory",
    "crates/eventwork_macros",
    "crates/eventwork_sync",
    "crates/eventwork_client",
    "examples/shared/basic_types",
    "examples/shared/demo_types",
    "examples/shared/fanuc_types",
    "examples/shared/fanuc_real_types",
    "examples/shared/control_demo_types",
    "examples/basic/server",
    "examples/basic/client",
    "examples/fanuc/server",
    "examples/fanuc/client",
    "examples/devtools-demo/server",
    "examples/control-demo/server",
]

[workspace.package]
rust-version = "1.88.0"
edition = "2024"

exclude = [
    "crates/eventwork_websockets/examples",
    "crates/eventwork_websockets/src/wasm_client_example",
    "crates/eventwork/examples",
    "crates/eventwork_websockets/leptos_client_example",
]



[workspace.dependencies]
# Core eventwork crates
eventwork = { path = "crates/eventwork" }
eventwork_client = { path = "crates/eventwork_client" }
eventwork_sync = { path = "crates/eventwork_sync", default-features = false }
eventwork_websockets = { path = "crates/eventwork_websockets" }
eventwork_common = { path = "crates/eventwork_common" }

# Example shared types
basic_types = { path = "examples/shared/basic_types" }
demo_types = { path = "examples/shared/demo_types" }
fanuc_types = { path = "examples/shared/fanuc_types" }
fanuc_real_types = { path = "examples/shared/fanuc_real_types" }
control_demo_types = { path = "examples/shared/control_demo_types" }

# Common dependencies
bevy = { version = "0.17", default-features = false, features = ["multi_threaded", "bevy_log"] }
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# Leptos dependencies (for WASM clients)
leptos = { version = "0.8.12", features = ["csr"] }
leptos-use = "0.16.3"
reactive_graph = "0.2"
reactive_stores = "0.2"

# WASM dependencies
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
wasm-bindgen = "0.2"
web-sys = "0.3"

# Fast-compile config
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
debug = true
codegen-units = 16
lto = false
incremental = true

# Use opt level 3 for dependencies
[profile.dev.package."*"]
opt-level = 3
