[package]
name = "eventwork_common"
version = "1.0.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
codee = "0.3.0"
eventwork_macros = { path = "../eventwork_macros" }
serde = { version = "1.0.190", features = ["derive"] }
bincode.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
