[package]
name = "eventwork_common"
version = "1.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
codee = "0.3.0"
eventwork_macros = { path = "../eventwork_macros" }
serde = { version = "1.0.190", features = ["derive"] }
bincode.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
