[package]
name = "eventwork_sync"
version = "0.1.0"
edition = "2024"
authors = ["Augment Agent <noreply@example.com>"]
description = "Reflection-driven synchronization middleware for Bevy ECS servers over eventwork."
license = "MIT"

[features]
default = ["runtime"]
# `runtime` pulls in the full eventwork dependency graph (async-net, etc.) for
# Bevy server applications. Frontend crates (like `eventwork_client`) can
# disable default features to avoid non-wasm-compatible dependencies while
# still reusing the wire-level message types and client_registry.
runtime = ["dep:eventwork", "dep:bevy", "dep:eventwork_common", "dep:thiserror"]

[dependencies]
bevy = { workspace = true, optional = true }
bincode = { workspace = true }
eventwork = { path = "../eventwork", optional = true }
eventwork_common = { path = "../eventwork_common", optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
# For integration-style tests using a miniature Bevy app
bincode = { workspace = true }
eventwork_websockets = { path = "../eventwork_websockets" }
