[package]
name = "fanuc_client"
version = "0.1.0"
edition = "2021"
description = "Leptos FANUC robot control client for bevy_eventwork/eventwork_sync"
license = "MIT"

[workspace]
# Standalone package used only for the FANUC client.

[dependencies]
leptos = { version = "0.8.12", features = ["csr"] }
leptos-use = "0.16.3"
reactive_graph = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
eventwork_devtools = { path = ".." }
eventwork_sync = { path = "../../eventwork_sync", default-features = false }
eventwork_common = { path = "../../eventwork_common" }
fanuc_shared = { path = "../../fanuc_shared" }
bincode = "2.0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

