[package]
name = "leptos_client_example"
version = "0.1.0"
edition = "2021"
description = "Leptos WebSocket Client Example for bevy_eventwork"
license = "MIT"

[workspace]
# This is a standalone package, not part of the parent workspace

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos-use = "0.14"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
codee = "0.2.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
eventwork_common = { path = "../../eventwork_common" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

