[package]
name = "basic_server"
version = "0.1.0"
edition = "2021"
description = "Basic Bevy ECS server example for eventwork_sync"
license = "MIT"

[dependencies]
bevy = { workspace = true }
eventwork = { workspace = true }
eventwork_sync = { workspace = true, features = ["runtime"] }
eventwork_websockets = { workspace = true }
basic_types = { workspace = true, features = ["server"] }

