[package]
name = "fanuc_real_types"
version = "0.1.0"
edition = "2021"

[features]
server = ["dep:bevy"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# fanuc_rmi with DTO feature is WASM-compatible (no tokio/mio dependencies)
fanuc_rmi = { git = "https://github.com/vertec-io/Fanuc_RMI_API.git", features = ["DTO"], default-features = false }
bevy = { version = "0.17", default-features = false, features = ["multi_threaded", "bevy_log"], optional = true }

