[package]
name = "eventwork_client_basic_example"
version = "0.1.0"
edition = "2021"
description = "Basic Leptos client example for eventwork_client"
license = "MIT"

[workspace]
# Standalone package for the basic client example

[dependencies]
# Leptos dependencies (match devtools version)
leptos = { version = "0.8.12", features = ["csr"] }
leptos-use = "0.16.3"
reactive_graph = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }

# WASM dependencies
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

# Eventwork dependencies
eventwork_client = { path = "../.." }
eventwork_devtools = { path = "../../../eventwork_devtools" }
eventwork_sync = { path = "../../../eventwork_sync", default-features = false }
eventwork_client_example_shared = { path = "../../../eventwork_client_example_shared" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

